# bigbluebutton-rs

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: audit.yml  test.yml
bbb-macro/: Cargo.toml
bbb-macro/src/: lib.rs
examples/: create.rs  meetings.rs  recording.rs  url-generation.rs  webhook.rs
src/: error.rs  helper.rs  lib.rs  meeting.rs
src/resources/: administration.rs  mod.rs  monitoring.rs  recording.rs  webhook.rs
tests/: administration.rs  monitoring.rs
