[package]
name = "bigbluebutton"
version = "0.2.3"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
edition = "2018"
description = "Rust Crate for interacting with BBB APIs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaranGauswami/bigbluebutton-rs"

[dependencies]
sha2 = "0.9.1"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.7.0"
reqwest = "0.10.8"
serde-xml-rs = "0.4.0"
async-trait = "0.1.41"
bbb-macro = { path = "./bbb-macro" }
anyhow = "1.0.34"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }

[features]
default = ["monitoring", "administration"]
monitoring = []
administration = []

[workspace]
members = ["bbb-macro"]
