[package]
name = "bigbluebutton"
version = "0.2.3"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
edition = "2021"
description = "Rust Crate for interacting with BBB APIs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaranGauswami/bigbluebutton-rs"

[dependencies]
sha2 = "0.9"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.8"
reqwest = "0.11"
serde-xml-rs = "0.4"
anyhow = "1.0"
getset = "0.1"
url = "2.2"
sha-1 = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread"] }

[features]
default = ["monitoring", "administration", "webhook", "recording"]
monitoring = []
administration = []
webhook = ["sha-1"]
recording = []


[[example]]
name = "webhook"
required-features = ["webhook"]

[[example]]
name = "recording"
required-features = ["recording"]

[[example]]
name = "url-generation"
required-features = []